[gd_scene load_steps=80 format=3 uid="uid://doiyx6ug3vwt8"]

[ext_resource type="Script" path="res://level_2_manger.gd" id="1_6b8sd"]
[ext_resource type="AudioStream" uid="uid://blnbgrdvxklw8" path="res://Sounds/BackGound.mp3" id="2_hymsj"]
[ext_resource type="PackedScene" uid="uid://f73260dclatg" path="res://Scenes/HeartsBar.tscn" id="3_42x0y"]
[ext_resource type="Texture2D" uid="uid://dfovic1d1lsa" path="res://Images/dsf.jpg" id="4_2r7o5"]
[ext_resource type="PackedScene" uid="uid://cx7j43bhwb55q" path="res://Scenes/PlayerReflectionTest.tscn" id="5_7eij1"]
[ext_resource type="Script" path="res://range_enemy.gd" id="6_d4fwi"]
[ext_resource type="Texture2D" uid="uid://fw802o5lwx55" path="res://Sprites/Death.png" id="7_hxfvr"]
[ext_resource type="Texture2D" uid="uid://bh4pknlqpcvl8" path="res://Sprites/Attack2.png" id="8_l3ify"]
[ext_resource type="Texture2D" uid="uid://yf2kx8ywyog7" path="res://Sprites/Idle.png" id="9_qrtbx"]
[ext_resource type="Texture2D" uid="uid://do4xmxjia60v2" path="res://Sprites/Take hit.png" id="10_5q8u7"]
[ext_resource type="Texture2D" uid="uid://y5phbxiiwsrc" path="res://Images/TheRed.png" id="11_k8a53"]
[ext_resource type="AudioStream" uid="uid://cj8qv7vdraaa3" path="res://Sounds/RangeDead.wav" id="12_18hit"]
[ext_resource type="AudioStream" uid="uid://sb2k0kxubuwo" path="res://Sounds/RangeAttack.wav" id="13_o2wvt"]
[ext_resource type="Script" path="res://Scenes/close_enemy.gd" id="14_xiqkw"]
[ext_resource type="Texture2D" uid="uid://rlh7f37ne3ee" path="res://Sprites/Bringer-of-Death-SpritSheet.png" id="15_dhusp"]
[ext_resource type="AudioStream" uid="uid://rc5csanhfs2" path="res://Sounds/CloseDead.wav" id="16_ommxd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iw6h"]
size = Vector2(20, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_eno3x"]
atlas = ExtResource("7_hxfvr")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw5p8"]
atlas = ExtResource("7_hxfvr")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_x0alp"]
atlas = ExtResource("7_hxfvr")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1lvg"]
atlas = ExtResource("7_hxfvr")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjnr3"]
atlas = ExtResource("7_hxfvr")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxdc2"]
atlas = ExtResource("7_hxfvr")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_vou1n"]
atlas = ExtResource("7_hxfvr")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wgk"]
atlas = ExtResource("8_l3ify")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_oipoo"]
atlas = ExtResource("8_l3ify")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_buvud"]
atlas = ExtResource("8_l3ify")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vp5u"]
atlas = ExtResource("8_l3ify")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksyf5"]
atlas = ExtResource("8_l3ify")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_85nhb"]
atlas = ExtResource("8_l3ify")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdbs7"]
atlas = ExtResource("8_l3ify")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lha0"]
atlas = ExtResource("8_l3ify")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0x1"]
atlas = ExtResource("9_qrtbx")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_4n47o"]
atlas = ExtResource("9_qrtbx")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdj32"]
atlas = ExtResource("9_qrtbx")
region = Rect2(500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i08b"]
atlas = ExtResource("9_qrtbx")
region = Rect2(750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a8ui"]
atlas = ExtResource("9_qrtbx")
region = Rect2(1000, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kvol"]
atlas = ExtResource("9_qrtbx")
region = Rect2(1250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_4doid"]
atlas = ExtResource("9_qrtbx")
region = Rect2(1500, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_bce8n"]
atlas = ExtResource("9_qrtbx")
region = Rect2(1750, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aah3"]
atlas = ExtResource("10_5q8u7")
region = Rect2(0, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytuua"]
atlas = ExtResource("10_5q8u7")
region = Rect2(250, 0, 250, 250)

[sub_resource type="AtlasTexture" id="AtlasTexture_ig3w0"]
atlas = ExtResource("10_5q8u7")
region = Rect2(500, 0, 250, 250)

[sub_resource type="SpriteFrames" id="SpriteFrames_184vv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eno3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw5p8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x0alp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1lvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjnr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxdc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vou1n")
}],
"loop": false,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oipoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buvud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vp5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksyf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85nhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdbs7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lha0")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0x1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4n47o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdj32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i08b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a8ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kvol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4doid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bce8n")
}],
"loop": true,
"name": &"Idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aah3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytuua")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ig3w0")
}],
"loop": false,
"name": &"Sick",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_cpggk"]
atlas = ExtResource("15_dhusp")
region = Rect2(700, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_oc715"]
atlas = ExtResource("15_dhusp")
region = Rect2(840, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_beiro"]
atlas = ExtResource("15_dhusp")
region = Rect2(980, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8uvv"]
atlas = ExtResource("15_dhusp")
region = Rect2(0, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_5e0f2"]
atlas = ExtResource("15_dhusp")
region = Rect2(140, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll0y5"]
atlas = ExtResource("15_dhusp")
region = Rect2(280, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_cibmj"]
atlas = ExtResource("15_dhusp")
region = Rect2(420, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw0wn"]
atlas = ExtResource("15_dhusp")
region = Rect2(560, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w21g"]
atlas = ExtResource("15_dhusp")
region = Rect2(700, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q5ck"]
atlas = ExtResource("15_dhusp")
region = Rect2(840, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3iwm"]
atlas = ExtResource("15_dhusp")
region = Rect2(0, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec406"]
atlas = ExtResource("15_dhusp")
region = Rect2(140, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc32q"]
atlas = ExtResource("15_dhusp")
region = Rect2(280, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xi277"]
atlas = ExtResource("15_dhusp")
region = Rect2(420, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8mmv8"]
atlas = ExtResource("15_dhusp")
region = Rect2(560, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnssv"]
atlas = ExtResource("15_dhusp")
region = Rect2(700, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_muf2p"]
atlas = ExtResource("15_dhusp")
region = Rect2(840, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_502td"]
atlas = ExtResource("15_dhusp")
region = Rect2(980, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwigi"]
atlas = ExtResource("15_dhusp")
region = Rect2(0, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxr7e"]
atlas = ExtResource("15_dhusp")
region = Rect2(140, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye81m"]
atlas = ExtResource("15_dhusp")
region = Rect2(0, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_m44gr"]
atlas = ExtResource("15_dhusp")
region = Rect2(140, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6bog"]
atlas = ExtResource("15_dhusp")
region = Rect2(280, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_db07y"]
atlas = ExtResource("15_dhusp")
region = Rect2(420, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct1ou"]
atlas = ExtResource("15_dhusp")
region = Rect2(560, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_lftcj"]
atlas = ExtResource("15_dhusp")
region = Rect2(700, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_btoxa"]
atlas = ExtResource("15_dhusp")
region = Rect2(840, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_j77np"]
atlas = ExtResource("15_dhusp")
region = Rect2(980, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0nq1"]
atlas = ExtResource("15_dhusp")
region = Rect2(140, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_25kgp"]
atlas = ExtResource("15_dhusp")
region = Rect2(280, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_p0bgd"]
atlas = ExtResource("15_dhusp")
region = Rect2(420, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nsx6"]
atlas = ExtResource("15_dhusp")
region = Rect2(560, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxjek"]
atlas = ExtResource("15_dhusp")
region = Rect2(700, 279, 140, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_r2mx3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpggk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oc715")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_beiro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8uvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5e0f2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll0y5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cibmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw0wn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w21g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q5ck")
}],
"loop": false,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3iwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec406")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc32q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xi277")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8mmv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnssv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muf2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_502td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwigi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxr7e")
}],
"loop": false,
"name": &"Hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye81m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m44gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6bog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_db07y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct1ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lftcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btoxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j77np")
}],
"loop": true,
"name": &"Idel",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0nq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25kgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0bgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nsx6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxjek")
}],
"loop": false,
"name": &"Sick",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7gxus"]
size = Vector2(40, 40.817)

[node name="Level_2" type="Node2D"]
position = Vector2(240, 240)

[node name="Level_2Manger" type="Node2D" parent="."]
position = Vector2(153, -150)
scale = Vector2(1.10321, 1.10321)
script = ExtResource("1_6b8sd")

[node name="BackGound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hymsj")
autoplay = true
bus = &"BGM"
parameters/looping = false

[node name="HeartsBar" parent="." instance=ExtResource("3_42x0y")]
offset_left = -574.0
offset_top = -322.0
offset_right = -182.0
offset_bottom = -194.0
scale = Vector2(0.416884, 0.416884)

[node name="Dsf" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(2, 3)
scale = Vector2(2.91223, 2.91223)
texture = ExtResource("4_2r7o5")

[node name="PlayerReflectionTest" parent="." instance=ExtResource("5_7eij1")]

[node name="Enemys" type="Node2D" parent="."]

[node name="RangedEnemy2" type="Node2D" parent="Enemys"]
position = Vector2(276, -252)
scale = Vector2(1.29108, 1.29108)

[node name="RangeEnemy" type="CharacterBody2D" parent="Enemys/RangedEnemy2"]
position = Vector2(-48.7964, 27.8836)
floor_block_on_wall = false
script = ExtResource("6_d4fwi")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/RangedEnemy2/RangeEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-1.47635, -3.83998)
shape = SubResource("RectangleShape2D_4iw6h")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy2/RangeEnemy"]
z_index = 1
position = Vector2(-1.47635, -16.84)

[node name="HitAniSprite" type="AnimatedSprite2D" parent="Enemys/RangedEnemy2/RangeEnemy"]
z_index = 1
position = Vector2(-0.476347, -19.84)
sprite_frames = SubResource("SpriteFrames_184vv")
animation = &"Dead"

[node name="Area2D" type="Area2D" parent="Enemys/RangedEnemy2/RangeEnemy"]
position = Vector2(-3.79999, 6.39642)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D2" type="Sprite2D" parent="Enemys/RangedEnemy2/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.46218, 14.7731)
scale = Vector2(0.794104, 0.449399)
texture = ExtResource("11_k8a53")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy2/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(0, 11.0798)
scale = Vector2(0.458319, 0.803025)
texture = ExtResource("11_k8a53")

[node name="RangeSound" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy2"]
stream = ExtResource("12_18hit")

[node name="RangeAttack" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy2"]
stream = ExtResource("13_o2wvt")

[node name="CloseEnemy3" type="Node2D" parent="Enemys"]
position = Vector2(-13, -189)
scale = Vector2(1.21707, 1.21707)

[node name="CloseEnemy" type="CharacterBody2D" parent="Enemys/CloseEnemy3"]
position = Vector2(36.974, 23.8277)
script = ExtResource("14_xiqkw")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CloseEnemySprit2D" type="AnimatedSprite2D" parent="Enemys/CloseEnemy3/CloseEnemy"]
z_index = 1
position = Vector2(-35.1706, -20.0533)
sprite_frames = SubResource("SpriteFrames_r2mx3")
animation = &"Sick"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/CloseEnemy3/CloseEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-1.17062, 4.53822)
shape = SubResource("RectangleShape2D_7gxus")

[node name="Area2D" type="Area2D" parent="Enemys/CloseEnemy3/CloseEnemy"]
position = Vector2(-3.94811, 2.13112)
scale = Vector2(0.585177, 0.569828)

[node name="Sprite2D" type="Sprite2D" parent="Enemys/CloseEnemy3/CloseEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.90457, 5.80913)
scale = Vector2(0.5745, 0.57066)
texture = ExtResource("11_k8a53")

[node name="CloseDead" type="AudioStreamPlayer2D" parent="Enemys/CloseEnemy3"]
stream = ExtResource("16_ommxd")

[node name="CloseEnemy2" type="Node2D" parent="Enemys"]
position = Vector2(179, -236)
scale = Vector2(1.10321, 1.10321)

[node name="CloseEnemy" type="CharacterBody2D" parent="Enemys/CloseEnemy2"]
position = Vector2(-242.021, 76.1414)
script = ExtResource("14_xiqkw")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CloseEnemySprit2D" type="AnimatedSprite2D" parent="Enemys/CloseEnemy2/CloseEnemy"]
z_index = 1
position = Vector2(-34.2413, -21.4834)
sprite_frames = SubResource("SpriteFrames_r2mx3")
animation = &"Hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/CloseEnemy2/CloseEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-0.241257, 3.10807)
shape = SubResource("RectangleShape2D_7gxus")

[node name="Area2D" type="Area2D" parent="Enemys/CloseEnemy2/CloseEnemy"]
position = Vector2(-0.702755, -1.54163)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D" type="Sprite2D" parent="Enemys/CloseEnemy2/CloseEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.90457, 5.80913)
scale = Vector2(0.5745, 0.57066)
texture = ExtResource("11_k8a53")

[node name="CloseDead" type="AudioStreamPlayer2D" parent="Enemys/CloseEnemy2"]
stream = ExtResource("16_ommxd")

[node name="RangedEnemy" type="Node2D" parent="Enemys"]
position = Vector2(-208, -246)
scale = Vector2(1.30143, 1.30143)

[node name="RangeEnemy" type="CharacterBody2D" parent="Enemys/RangedEnemy"]
position = Vector2(-2.30516, 26.1251)
script = ExtResource("6_d4fwi")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/RangedEnemy/RangeEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(0.289927, -5.76165)
shape = SubResource("RectangleShape2D_4iw6h")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy/RangeEnemy"]
z_index = 1
position = Vector2(0.289927, -18.7617)

[node name="HitAniSprite" type="AnimatedSprite2D" parent="Enemys/RangedEnemy/RangeEnemy"]
z_index = 1
position = Vector2(1.28993, -21.7617)
sprite_frames = SubResource("SpriteFrames_184vv")
animation = &"Dead"

[node name="Area2D" type="Area2D" parent="Enemys/RangedEnemy/RangeEnemy"]
position = Vector2(-1.24685, 0.448048)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D2" type="Sprite2D" parent="Enemys/RangedEnemy/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.46218, 14.7731)
scale = Vector2(0.794104, 0.449399)
texture = ExtResource("11_k8a53")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(0, 11.0798)
scale = Vector2(0.458319, 0.803025)
texture = ExtResource("11_k8a53")

[node name="RangeSound" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy"]
stream = ExtResource("12_18hit")

[node name="RangeAttack" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy"]
stream = ExtResource("13_o2wvt")

[node name="RangedEnemy3" type="Node2D" parent="Enemys"]
position = Vector2(-25, -256)
scale = Vector2(1.29108, 1.29108)

[node name="RangeEnemy" type="CharacterBody2D" parent="Enemys/RangedEnemy3"]
position = Vector2(-48.7964, 27.8836)
floor_block_on_wall = false
script = ExtResource("6_d4fwi")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/RangedEnemy3/RangeEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-1.47635, -3.83998)
shape = SubResource("RectangleShape2D_4iw6h")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy3/RangeEnemy"]
z_index = 1
position = Vector2(-1.47635, -16.84)

[node name="HitAniSprite" type="AnimatedSprite2D" parent="Enemys/RangedEnemy3/RangeEnemy"]
z_index = 1
position = Vector2(-0.476347, -19.84)
sprite_frames = SubResource("SpriteFrames_184vv")
animation = &"Dead"

[node name="Area2D" type="Area2D" parent="Enemys/RangedEnemy3/RangeEnemy"]
position = Vector2(-3.79999, 6.39642)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D2" type="Sprite2D" parent="Enemys/RangedEnemy3/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.46218, 14.7731)
scale = Vector2(0.794104, 0.449399)
texture = ExtResource("11_k8a53")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy3/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(0, 11.0798)
scale = Vector2(0.458319, 0.803025)
texture = ExtResource("11_k8a53")

[node name="RangeSound" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy3"]
stream = ExtResource("12_18hit")

[node name="RangeAttack" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy3"]
stream = ExtResource("13_o2wvt")

[node name="RangedEnemy4" type="Node2D" parent="Enemys"]
position = Vector2(159, -252)
scale = Vector2(1.29108, 1.29108)

[node name="RangeEnemy" type="CharacterBody2D" parent="Enemys/RangedEnemy4"]
position = Vector2(-48.7964, 27.8836)
floor_block_on_wall = false
script = ExtResource("6_d4fwi")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/RangedEnemy4/RangeEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-1.47635, -3.83998)
shape = SubResource("RectangleShape2D_4iw6h")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy4/RangeEnemy"]
z_index = 1
position = Vector2(-1.47635, -16.84)

[node name="HitAniSprite" type="AnimatedSprite2D" parent="Enemys/RangedEnemy4/RangeEnemy"]
z_index = 1
position = Vector2(-0.476347, -19.84)
sprite_frames = SubResource("SpriteFrames_184vv")
animation = &"Dead"

[node name="Area2D" type="Area2D" parent="Enemys/RangedEnemy4/RangeEnemy"]
position = Vector2(-3.79999, 6.39642)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D2" type="Sprite2D" parent="Enemys/RangedEnemy4/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.46218, 14.7731)
scale = Vector2(0.794104, 0.449399)
texture = ExtResource("11_k8a53")

[node name="Sprite2D" type="Sprite2D" parent="Enemys/RangedEnemy4/RangeEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(0, 11.0798)
scale = Vector2(0.458319, 0.803025)
texture = ExtResource("11_k8a53")

[node name="RangeSound" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy4"]
stream = ExtResource("12_18hit")

[node name="RangeAttack" type="AudioStreamPlayer2D" parent="Enemys/RangedEnemy4"]
stream = ExtResource("13_o2wvt")

[node name="CloseEnemy4" type="Node2D" parent="Enemys"]
position = Vector2(420, -234)
scale = Vector2(1.10321, 1.10321)

[node name="CloseEnemy" type="CharacterBody2D" parent="Enemys/CloseEnemy4"]
position = Vector2(-242.021, 76.1414)
script = ExtResource("14_xiqkw")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CloseEnemySprit2D" type="AnimatedSprite2D" parent="Enemys/CloseEnemy4/CloseEnemy"]
z_index = 1
position = Vector2(-34.2413, -21.4834)
sprite_frames = SubResource("SpriteFrames_r2mx3")
animation = &"Hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/CloseEnemy4/CloseEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-0.241257, 3.10807)
shape = SubResource("RectangleShape2D_7gxus")

[node name="Area2D" type="Area2D" parent="Enemys/CloseEnemy4/CloseEnemy"]
position = Vector2(-0.702755, -1.54163)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D" type="Sprite2D" parent="Enemys/CloseEnemy4/CloseEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.90457, 5.80913)
scale = Vector2(0.5745, 0.57066)
texture = ExtResource("11_k8a53")

[node name="CloseDead" type="AudioStreamPlayer2D" parent="Enemys/CloseEnemy4"]
stream = ExtResource("16_ommxd")

[node name="CloseEnemy5" type="Node2D" parent="Enemys"]
position = Vector2(120, -233)
scale = Vector2(1.10321, 1.10321)

[node name="CloseEnemy" type="CharacterBody2D" parent="Enemys/CloseEnemy5"]
position = Vector2(-242.021, 76.1414)
script = ExtResource("14_xiqkw")
top_right = Vector2i(7, 7)
WALL_LAYER = 1

[node name="CloseEnemySprit2D" type="AnimatedSprite2D" parent="Enemys/CloseEnemy5/CloseEnemy"]
z_index = 1
position = Vector2(-34.2413, -21.4834)
sprite_frames = SubResource("SpriteFrames_r2mx3")
animation = &"Hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemys/CloseEnemy5/CloseEnemy"]
light_mask = 3
visibility_layer = 3
position = Vector2(-0.241257, 3.10807)
shape = SubResource("RectangleShape2D_7gxus")

[node name="Area2D" type="Area2D" parent="Enemys/CloseEnemy5/CloseEnemy"]
position = Vector2(-0.702755, -1.54163)
scale = Vector2(0.624152, 0.624152)

[node name="Sprite2D" type="Sprite2D" parent="Enemys/CloseEnemy5/CloseEnemy/Area2D"]
modulate = Color(1, 1, 1, 0.639216)
position = Vector2(2.90457, 5.80913)
scale = Vector2(0.5745, 0.57066)
texture = ExtResource("11_k8a53")

[node name="CloseDead" type="AudioStreamPlayer2D" parent="Enemys/CloseEnemy5"]
stream = ExtResource("16_ommxd")
